# murk

./: .gitignore  .gitmodules  .gitmodules.orig  .travis.yml  CMakeLists.txt  CMakeLists.txt.autosave
automurk/: main.cpp
autostage/: create_appimage.sh  main.cpp
cmake/: FindBotan.cmake  FindCapstone.cmake  FindElf.cmake  FindZ3.cmake
foo/: README.md
foo/cryptopals/1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp
foo/cryptopals/2/: 10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  9.cpp
foo/deloite/: bitflip.cpp  optides.cpp  png.cpp  pumpkin.cpp  snake.cpp
foo/dev/: daytime.cpp  disasm.cpp  dns.cpp  extend.cpp  gen_dist.cpp
foo/tryhackme/: cryptochallenges.cpp  cryptofunhouse.cpp
foo/utils/: escape.cpp  mac.cpp  mac.cpp.autosave
include/murk/: baby.hpp  byte_stream.hpp  common.hpp  data.hpp  flow.hpp  log.hpp  mod.hpp  random.hpp  span.hpp  subprocess.hpp  xfer.hpp
include/murk/crypto/: aes.hpp  analysis.hpp  awful.hpp  block.hpp  construction_flaws.hpp  dh.hpp  group.hpp  hash.hpp  mitm.hpp  padding.hpp  params.hpp
include/murk/ext/: famous.hpp  lan.hpp  manager.hpp  seclists.hpp
include/murk/filt/: zealous.hpp
include/murk/flows/: bytes.hpp  file.hpp  fs.hpp  ptree.hpp  seq.hpp  string.hpp  web.hpp
include/murk/plod/: js.hpp  php.hpp  png_chunks.hpp  posix_sh.hpp
include/murk/priv/: docker.hpp  sbin.hpp
include/murk/pwn/: capstone_iface.hpp  disasm.hpp  dissect.hpp  elf.hpp  operation.hpp  rop.hpp
include/murk/tool/: msfvenom.hpp
include/murk/web/: form.hpp  http.hpp  http_eps.hpp  ssti.hpp  tcp.hpp  telnet.hpp  uri.hpp  web.hpp
include/murk/xflt/: brute.hpp  dns.hpp  sql.hpp
include/murk/xplt/: sql.hpp
src/: all_mods.cpp  baby.cpp  data.cpp  mod.cpp  random.cpp  subprocess.cpp
src/crypto/: analysis.cpp  hash.cpp  padding.cpp
src/crypto/analysis/: awful.cpp  block.cpp  consts.cpp
src/crypto/hash/: extend.cpp  hmac.cpp
src/ext/: manager.cpp
src/flows/: bytes.cpp  file.cpp  fs.cpp  ptree.cpp  string.cpp
src/flows/web/: form.cpp  http.cpp  http_client.cpp  uri.cpp
src/plod/: png_chunks.cpp
src/pwn/: .disasm.cpp.swp  disasm.cpp  dissect.cpp  elf.cpp  rop.cpp
src/web/: form.cpp  http.cpp  http_client.cpp  ssti.cpp  tcp.cpp  uri.cpp
src/xflt/: brute.cpp  dns.cpp  dns.cpp.autosave
swig/: .build.sh.swp  build.sh  murk.py  python.i  std_string_view.i  utils.swig  utils_wrap.cxx
test/: flow.cpp
test/flows/: web.cpp
test/pwn/: disasm.cpp
